# aws-sdk-c

./: .gitignore  CMakeLists.txt  DEPENDENCY_MANAGEMENT_PLAN.md  IMPLEMENTATION_DETAILS.md  PLAN.md  README.md  VENDORING.md  checkpoint.md  implementation-plan.md  implementation.md  technical.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  s3_list_buckets.c
include/aws/auth/: auth.h  credentials.h  exports.h  sigv4.h
include/aws/cal/: exports.h  hash.h  hmac.h
include/aws/common/: allocator.h  array_list.h  assert.h  atomics.h  atomics.inl  atomics_fallback.inl  atomics_gnu.inl  byte_buf.h  byte_order.h  byte_order.inl  common.h  date_time.h  encoding.h  error.h  exports.h  hash_table.h  http.h  http_client.h  linked_list.h  linked_list.inl  log_channel.h  logging.h  math.h  memory.h  stdbool.h  string.h  thread_local.h  uri.h  zero.h  zero.inl
include/aws/common/private/: hash_table_impl.h
include/aws/http/: request_response.h
include/aws/io/: input_stream.h  io.h  logging.h  tee_input_stream.h
include/aws/s3/: s3_client.h
include/aws/s3/model/: list_buckets_result.h
include/aws/sdkutils/: exports.h  sdkutils.h
scripts/: cosmo_build.sh  extract_dependencies.sh
src/: CMakeLists.txt  core_placeholder.c
src/auth/: auth.c  credentials.c  sigv4.c
src/cal/: hash.c  hmac.c
src/common/: allocator.c  array_list.c  byte_buf.c  date_time.c  encoding.c  error.c  hash_table.c  http.c  http_client.c  logging.c  math.c  memory.c  string.c  uri.c
src/io/: io.c  tee_input_stream.c
src/s3/: CMakeLists.txt  s3_client.c
src/s3/model/: list_buckets_result.c
src/sdkutils/: sdkutils.c
tests/: CMakeLists.txt  sigv4_test.c
